# aodag-wiki

./: LICENSE  MANIFEST.in  NEWS.rst  Procfile  README.rst  constraints.txt  development.ini  pyproject.toml  setup.cfg  tox.ini
aodag/wiki/: interfaces.py  models.py  resources.py  view.py  views.py  wiki.py  wsgi.py
aodag/wiki/templates/: base.html  layout.html  wikipage.html  wikipage_edit.html
tests/: test_app.py  test_it.py
