[metadata]
name = aodag.wiki
version = attr: aodag.wiki.__version__
author = Atsushi Odagiri
author-email = aodagx@gmail.com
description = simple wiki application
long_description = file:README.rst
license = MIT

[options]
packages =
  aodag.wiki
install_requires =
  pyramid
  pyramid_tm
  pyramid_sqlalchemy
  pyramid_jinja2
  pyramid_services
  alembic
  commonmark
  waitress

[options.extras_require]
testing =
  pytest
  pytest-cov
  webtest
dev =
  towncrier

[options.entry_points]
paste.app_factory =
  main=aodag.wiki.wsgi:main
