[egg_info]
tag-build = dev
tag-date = 1

[aliases]
release = egg_info -Db "" bdist_wheel sdist

[bdist_wheel]
universal = 1

[metadata]
name = aodag.wiki
version = attr: aodag.wiki.__version__
author = Atsushi Odagiri
author-email = aodagx@gmail.com
description = simple wiki application
long_description = file:README.rst, NEWS.rst
license = MIT
url = https://github.com/aodag/aodag-wiki


[options]
include_package_data = true
packages =
  aodag.wiki
install_requires =
  pyramid
  pyramid_tm
  pyramid_sqlalchemy
  pyramid_jinja2
  pyramid_services
  alembic
  commonmark
  waitress

[options.extras_require]
testing =
  pytest
  pytest-cov
  webtest
dev =
  towncrier
  tox

[options.entry_points]
paste.app_factory =
  main=aodag.wiki.wsgi:main
